Added authorization code with PKCE option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
 
-spring.mustache.suffix=.html
+#spring.th.suffix=.html
 
 #server.port=8091
 
